@@ -6,6 +6,24 @@
 -- Author: Michael Soderstrom <miraso@pacbell.net>
 --
 
+-- Add constraint to keep publish_status synched with publish_date.
+ALTER TABLE media
+ADD CONSTRAINT ck_media__publish_status CHECK (
+    publish_status IN (0,1)
+    AND (
+        (
+            publish_status = 0
+            AND publish_date IS NULL
+            AND first_publish_date IS NULL
+        )
+        OR (
+            publish_status = 1
+            AND publish_date IS NOT NULL
+            AND first_publish_date IS NOT NULL
+        )
+    )
+);
+
 ALTER TABLE media
 ADD CONSTRAINT fk_source__media FOREIGN KEY (source__id)
 	REFERENCES source(id) ON DELETE RESTRICT;
